--- a/views/layout.html
+++ b/views/layout.html
@@ -15,6 +15,7 @@
 <footer>
 </footer>
 
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="/js/main.js"></script>
 </body>
 </html>
