--- a/views/layout.html
+++ b/views/layout.html
@@ -3,8 +3,8 @@
 <head>
 <title>{{title}}</title>
 
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="/css/normalize.css">
+<link rel="stylesheet" href="/css/main.css">
 <script src="/socket.io/socket.io.js"></script>
 </head>
 
