Added  new designers and selected route

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -150,6 +150,9 @@ textarea {
     height: 30px;
     margin: 0 auto;
     line-height: 30px;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
 }
 
 .warning .js-yes:hover {
