--- a/views/layout.html
+++ b/views/layout.html
@@ -12,6 +12,7 @@
 {{#if user}}
 <p>
 <a href="/">Select</a> | 
+<a href="/get/selected">Selected</a> | 
 <a href="/checknew">Check New</a> | 
 <a href="/logout">Log Out</a>
 </p>
