--- a/views/checknew.html
+++ b/views/checknew.html
@@ -1,1 +1,6 @@
-Inserted: <span>{{inserts}}</span>
+<div class="warning">
+    If possible do not "check new" too fequently in a short space of time. Every time we check for new content   (including refreshing this page) a number of requests are made to the Instagram API (one per designer) and if this happens too frequently in a short space of time Instagram says <em>"No more!"</em>.<br/>
+    <!-- <div class="last">The last insert was: {{last}}</div> -->
+    Inserted: <span>{{inserts}}</span></br>
+    Failed: <span>{{failed}}</span>
+</div>
