Relevant sockets are now in instagram module. Updated layout with new correct link.

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -13,7 +13,7 @@
 <p>
 <a href="/">Select</a> | 
 <a href="/get/selected">Selected</a> | 
-<a href="/checknew">Check New</a> | 
+<a href="/instagram/checknew/designers">Check New Instagrams</a> | 
 <a href="/logout">Log Out</a>
 </p>
 {{else}}
