Add Twitter fetch, munge and save - introducing env config

--- a/app/views/contentitems.html
+++ b/app/views/contentitems.html
@@ -6,7 +6,7 @@
 {{/if}}
     data-item-id="{{id}}"
     data-created="{{created_time}}">
-    <img class="content-item__image" src="{{images.low_resolution.url}}" />
+    <img class="content-item__image" alt="Select" src="{{images.low_resolution.url}}" />
     <div>
         <hr/>
         <form>
