--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -14,6 +14,7 @@
 <a href="/">Select</a> | 
 <a href="/get/selected">Selected</a> | 
 <a href="/instagram/checknew/designers">Check New Instagrams</a> | 
+<a href="/twitter/checknew/designers">Check New Tweets</a> | 
 <a href="/logout">Log Out</a>
 </p>
 {{else}}
