Moved sockets into their own module. Adjusted templates, JS and sockets to handle different types. Instagram module has insert method to insert hashtag content

--- a/app/views/contentitems.html
+++ b/app/views/contentitems.html
@@ -5,6 +5,7 @@
 <div class="content-item content-item--instagram" 
 {{/if}}
     data-item-id="{{id}}"
+    data-item-type="{{type}}"
     data-created="{{created_time}}">
     <img class="content-item__image" alt="Select" src="{{images.low_resolution.url}}" />
     <div>
