Correct API name in check template

--- a/app/views/checknew.html
+++ b/app/views/checknew.html
@@ -1,5 +1,5 @@
 <div class="warning">
-    If possible do not "check new" too fequently in a short space of time. Every time we check for new content   (including refreshing this page) a number of requests are made to the Instagram API (one per designer) and if this happens too frequently in a short space of time Instagram says <em>"No more!"</em>.<br/>
+    If possible do not "check new" too fequently in a short space of time. Every time we check for new content   (including refreshing this page) a number of requests are made to the {{ api_name }} API (one per designer) and if this happens too frequently in a short space of time {{ api_name }} says <em>"No more!"</em>.<br/>
     <!-- <div class="last">The last insert was: {{last}}</div> -->
     Inserted: <span>{{inserts}}</span></br>
     Failed: <span>{{failed}}</span>
