--- a/app/views/twitter.html
+++ b/app/views/twitter.html
@@ -12,7 +12,7 @@
 
     <div class="designers">
         <h3>Designers</h3>
-        <a href="/twitter/checknew/designers">Check new designers</a><span class="information"> (Use this to check for new  content from designers)</span>
+        <a href="/twitter/checknew/designers">Check all designers</a><span class="information"> (Use this to check for new  content from designers)</span>
         <ul class="designers__select">
             <li><a href="/twitter/select/designers">All</a></li>
         {{#each designers}}
